--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <!-- Babel for JSX transformation -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Optional favicon -->
+  <link rel="icon" href="data:,">
 </head>
 <body class="bg-gray-100 text-gray-800">
   <div id="root" class="p-6"></div>
